--- a/GWAE/static/allposts.css
+++ b/GWAE/static/allposts.css
@@ -1,7 +1,4 @@
-body {
-  margin: 0;
-  
-}
+body {margin: 0;}
 
 .followbtn{
   position: absolute;
@@ -9,7 +6,7 @@ body {
   right: 0;
   width: 200px;
   height: 100px;
-  border: 3px solid #bb8a44;
+  border: 3px solid #73AD21;
 }
 
 ul.topnav {
@@ -17,7 +14,7 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #5f6f3a;
+  background-color: #333;
 }
 
 ul.topnav li {float: left;}
@@ -32,7 +29,7 @@ ul.topnav li a {
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-ul.topnav li a.active {background-color: #bb8a44;}
+ul.topnav li a.active {background-color: #4CAF50;}
 
 ul.topnav li.right {float: right;}
 
